[tool.poetry]
name = "allesc"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.4.20"
fastapi = "^0.67.0"
uvicorn = "^0.14.0"
PyMySQL = "^1.0.2"
aiofiles = "^0.7.0"
fastapi-login = "^1.6.3"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
